# APF-HGG

./: .gitignore  README.md  camera_librealsense.py  common.py  common_real.py  franka_robot.py  frankx_eefposition.py  frankx_home.py  mppi_constants.py  performance_test.csv  performance_test.sh  play.py  play_camera.py  play_real.py  plot.py  requirements.txt  requirements_hgg-mppi_bk.txt  requirements_rlgpu.txt  test.py  test_gym2.py  test_policy.py  train.py
algorithm/: __init__.py  replay_buffer.py
apf/: CMakeLists.txt  build.sh  setup.py  wrapper.py
apf/src/: CMakeLists.txt  constants.h  gateway.cpp  main.cpp
apf/src/apf/: apf.cpp  apf.h
apf/src/controller/: Controller.cpp  Controller.h
apf/src/geometry/: Capsule.cpp  Capsule.h  Line.cpp  Line.h
apf/src/geometry/gte/: DistSegmentSegment.h  Segment.h  Vector.h
apf/src/transform/: jacobian.cpp  jacobian.h  transform.cpp  transform.h
apf/tests/: CMakeLists.txt  CapsuleTest.cpp  JacobianTest.cpp  LineTest.cpp  TransformTest.cpp
env_ext/: __init__.py  distance_graph.py  utils.py
env_ext_real/: __init__.py
envs/: __init__.py
envs_real/: __init__.py
fast_fk/: forward_kinematics.cpp  setup.py  wrapper.py
learner/: __init__.py  ghgg.py  hgg.py  normal.py
mpc/: __init__.py  mpc_common.py  pick_3d_target_obstacle.py  pick_dyn_door_obstacles.py  pick_dyn_lifted_obstacles.py  pick_dyn_obstacles.py  pick_dyn_obstacles_max.py  pick_dyn_sqr_obstacles.py  plot.py  plot_small.py
mpc_real/: franka_mpc_common.py  franka_pick_dyn_sqr_obstacles.py
mppi/: __init__.py  pick_3d_target_obstacle.py  pick_dyn_door_obstacles.py  pick_dyn_lifted_obstacles.py  pick_dyn_obstacles.py  pick_dyn_sqr_obstacles.py  pick_static_sqr_obstacles.py
mppi_real/: __init__.py  pick_3d_target_obstacle.py  pick_dyn_obstacles.py  (+4 more)
(+216 files in other folders)
